--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
           test -n "${{ github.ref }}" && REVISION="${{ github.ref }}" || REVISION=`git describe --always --long --tags`
           export REVISION
           echo "REV: ${REVISION} - Descr: Pipeline ${{ github.run_id }} / JOB ${{ github.job }} (${{ github.job_workflow_sha }} - Tag: ${{ github.ref_name }} $MAVEN_CLI_OPTS test"
-          mvn -Drevision=${REVISION} -Drp.description="Pipeline ${{ github.run_id }} / JOB ${{ github.job }} (${{ github.job_workflow_sha }})" -Drp.tags="${{ github.ref_name }}" $MAVEN_CLI_OPS test
+          mvn -Drevision=${REVISION} -Drp.description="Pipeline ${{ github.run_id }} / JOB ${{ github.job }} (${{ github.job_workflow_sha }})" -Drp.tags="${{ github.ref_name }}" $MAVEN_CLI_OPTS test
   # test the previous build project artifact
   test:
     runs-on: ubuntu-latest
@@ -82,7 +82,7 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Test
         run: | 
-          echo "Verify on: $MAVEN_CLI_OPS verify"
+          echo "Verify on: $MAVEN_CLI_OPTS verify"
           mvn $MAVEN_CLI_OPTS verify
   # deploy the new release to Maven Central
   release:
