--- a/.github/workflows/build-and-test-pr.yml
+++ b/.github/workflows/build-and-test-pr.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       # checkout the project to the runner
       - uses: actions/checkout@v4
+        with:
+          path: main # default branch
       # install Java SDK on the runner
       - name: Set up JDK ${{ matrix.Java }}
         uses: actions/setup-java@v4
@@ -39,11 +41,13 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
+      - name: Debug Diff
+        run: echo "git --no-pager diff" # debug
       # build the project on the runner
       - name: Build
         run: |
-          echo "Verify on: $MAVEN_CLI_OPTS verify"
-          mvn $MAVEN_CLI_OPTS compile
+          echo "Build with: mvn ${{ env.MAVEN_CLI_OPTS }} compile"
+          mvn ${{ env.MAVEN_CLI_OPTS }} compile
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -73,5 +77,5 @@ jobs:
       # run the tests on the runner
       - name: Test
         run: |
-          echo "Verify on: $MAVEN_CLI_OPTS verify"
-          mvn $MAVEN_CLI_OPTS verify
+          echo "Verify on: ${{ env.MAVEN_CLI_OPTS }} verify"
+          mvn ${{ env.MAVEN_CLI_OPTS }} verify
