--- a/.github/workflows/build-and-test-pr.yml
+++ b/.github/workflows/build-and-test-pr.yml
@@ -14,70 +14,24 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         java: [ '17', '21' ]
     name: Java ${{ matrix.Java }} build
-    steps:
-      - name: configure git
-        run: git config --global init.defaultBranch main
-      # checkout the project to the runner
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2 # do not download the whole git history
-      # install Java SDK on the runner
-      - name: Set up JDK ${{ matrix.Java }}
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ matrix.Java }}
-          distribution: 'temurin'
-          cache: 'maven'
-          cache-dependency-path: |
-            pom.xml
-      # cache Maven dependencies for later use
-      - name: Cache local Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Debug Diff
-        run: git --no-pager diff
-      # build the project on the runner
-      - name: Build
-        run: |
-          echo "Build with: mvn ${{ env.MAVEN_CLI_OPTS }} compile"
-          mvn ${{ env.MAVEN_CLI_OPTS }} compile
+    uses: ./.github/workflows/build.yml
+    with:
+        java-version: ${{ matrix.Java }}
+        mvn-cli-opts: ${{ env.MAVEN_CLI_OPTS }}
+    secrets: inherit
+
   test:
-    runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
         java: [ '17', '21' ]
     name: Java ${{ matrix.Java }} test
-    steps:
-      # checkout the project to the runner
-      - uses: actions/checkout@v4
-      # install Java SDK on the runner
-      - uses: actions/setup-java@v4
-        with:
-          java-version: ${{ matrix.Java }}
-          distribution: 'temurin'
-          cache: 'maven'
-          cache-dependency-path: |
-            pom.xml
-      # cache Maven dependencies for later use
-      - name: Cache local Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      # run the tests on the runner
-      - name: Test
-        run: |
-          echo "Verify on: ${{ env.MAVEN_CLI_OPTS }} verify"
-          mvn ${{ env.MAVEN_CLI_OPTS }} verify
+    uses: ./.github/workflows/test.yml
+    with:
+      java-version: ${{ matrix.Java }}
+      mvn-cli-opts: ${{ env.MAVEN_CLI_OPTS }}
+    secrets: inherit
