--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     name: Java ${{ inputs.java-version }} build
     steps:
+      - name: configure git
+        run: git config --global init.defaultBranch main
+      # checkout the project to the runner
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2 # do not download the whole git history
+          ref: ${{ github.ref }}
       - uses: ./.github/actions/init-java-repo
         with:
           java-version: ${{ inputs.java-version }}
