--- a/.github/workflows/build-and-test-pr.yml
+++ b/.github/workflows/build-and-test-pr.yml
@@ -20,6 +20,13 @@ jobs:
         java: [ '17', '21' ]
     name: Java ${{ matrix.Java }}
     steps:
+      - name: configure git
+        run: git config --global init.defaultBranch main
+      # checkout the project to the runner
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2 # do not download the whole git history
+          ref: ${{ github.ref }}
       - uses: ./.github/actions/build
         with:
           java-version: ${{ matrix.Java }}
