--- a/.github/workflows/handle-pr.yml
+++ b/.github/workflows/handle-pr.yml
@@ -1,7 +1,7 @@
 # This GitHub workflow will clone the current main repository to an Ubuntu runner, apply the PR that triggered this
 # workflow and then run the tests against t
 
-name: Test Pull Request
+name: Handle Pull Requests
 on:
   pull_request:
     # branches: [ main ]
@@ -20,18 +20,21 @@ jobs:
         java: [ '17', '21' ]
     name: Java ${{ matrix.Java }}
     steps:
-      - name: configure git
+      - name: Configure git
         run: git config --global init.defaultBranch main
       # checkout the project to the runner
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 2 # do not download the whole git history
           ref: ${{ github.ref }}
-      - uses: ./.github/actions/build
+      - name: Build ${{ matrix.Java }}
+        uses: ./.github/actions/build
         with:
           java-version: ${{ matrix.Java }}
           mvn-cli-opts: $MAVEN_CLI_OPTS
-      - uses: ./.github/actions/test
+      - name: Test ${{ matrix.Java}}
+        uses: ./.github/actions/test
         with:
           java-version: ${{ matrix.Java }}
           mvn-cli-opts: $MAVEN_CLI_OPTS
