--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -13,16 +13,18 @@ on:
     # Pattern matched against refs/tags
     tags:
       - '*' # Push events to every tag not containing /
+
 env:
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true -U"
   ENVIRONMENT: "ci"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '17', '21' ]
+        java: [ '17' ]
     name: Java ${{ matrix.Java }} build
     steps:
       - run: echo "Building tag ${{ github.ref }}"
@@ -38,35 +40,15 @@ jobs:
       - name: Package
         run: |
           mvn ${{ env.MAVEN_CLI_OPTS }} "-Drevision=${REVISION}" -DskipTests -DskipITs package
-
-  # test the previous build project artifact
-  test:
-    needs: [build]
-    strategy:
-      matrix:
-        java: [ '17', '21' ]
-    name: Java ${{ matrix.Java }} test
-    uses: ./.github/workflows/test.yml
-    with:
-      java-version: ${{ matrix.Java }}
-      mvn-cli-opts: $${{ env.MAVEN_CLI_OPTS }}
-    secrets: inherit
-
-  # deploy the new release to Maven Central
-  release:
-    needs: [test]
-    strategy:
-      matrix:
-        java: [ '17', '21' ]
-    name: Java ${{ matrix.Java }} release
-    uses: ./.github/workflows/deploy-to-maven-central.yml
-    with:
-      java-version: ${{ matrix.Java }}
-      mvn-cli-opts: $${{ env.MAVEN_CLI_OPTS }}
-    secrets: inherit
-
-  # announce the new release on GitHub
-  publish:
-    needs: [release]
-    uses: ./.github/workflows/publish-to-github.yml
-    secrets: inherit
+      - name: Java ${{ matrix.Java }} test
+        uses: ./.github/actions/test
+        with:
+          java-version: ${{ matrix.Java }}
+          mvn-cli-opts: ${{ env.MAVEN_CLI_OPTS }}
+      - name: Java ${{ matrix.Java }} release
+        uses: ./.github/actions/release
+        with:
+          java-version: ${{ matrix.Java }}
+          mvn-cli-opts: ${{ env.MAVEN_CLI_OPTS }}
+      - name: Publish to GitHub
+        uses: ./.github/workflows/publish-to-github.yml
