--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -8,17 +8,26 @@ inputs:
   mvn-cli-opts:
     description: 'The client options to pass to Maven'
     required: true
+  gpg-passphrase:
+    description: 'GPG Private Key Passphrase'
+    required: true
+  sonatype-user:
+    description: 'Maven Central user'
+    required: true
+  sonatype-token:
+    description: 'Maven Central token'
+    required: true
 
 runs:
   using: "composite"
   steps:
-    - run: echo "Will start a Maven Central upload with version ${{ github.ref }}"
+    - run: echo "Will start a Maven Central upload with version ${{ github.ref_name }}"
       shell: bash
     - name: Publish package
       shell: bash
       run: |
-        echo "mvn ${{ inputs.mvn-cli-opts }} -DskipTests -DskipAssembly=true -Dmaven.install.skip=true -Drevision=${{ github.ref }} deploy"
-        mvn ${{ inputs.mvn-cli-opts }} -DskipTests -DskipAssembly=true -Dmaven.install.skip=true -Drevision=${{ github.ref }} deploy
+        mvn ${{ inputs.mvn-cli-opts }} -Prelease -DskipTests -DskipAssembly=true -Dmaven.install.skip=true -Drevision=${{ github.ref_name }} deploy
       env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        MAVEN_GPG_PASSPHRASE: ${{ inputs.gpg-passphrase }}
+        MAVEN_USERNAME: ${{ inputs.sonatype-user }}
+        MAVEN_PASSWORD: ${{ inputs.sonatype-token }}
