--- a/.github/workflows/handle-pr.yml
+++ b/.github/workflows/handle-pr.yml
@@ -1,5 +1,6 @@
-# This GitHub workflow will clone the current main repository to an Ubuntu runner, apply the PR that triggered this
-# workflow and then run the tests against t
+# This GitHub workflow will clone the current main repository to an Ubuntu
+# runner, apply the PR that triggered this workflow and then run the tests
+# against it
 
 name: Handle Pull Requests
 on:
@@ -20,19 +21,25 @@ jobs:
         java: [ '17', '21' ]
     name: Java ${{ matrix.Java }}
     steps:
+      # configure git by setting the default, protected branch
       - name: Configure git
         run: git config --global init.defaultBranch main
-      # checkout the project to the runner
+
+      # check out the pull-request to the runner
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 2 # do not download the whole git history
           ref: ${{ github.ref }}
+
+      # build the project with both Java 17 and 21 on the runner
       - name: Build with Java ${{ matrix.Java }}
         uses: ./.github/actions/build
         with:
           java-version: ${{ matrix.Java }}
           mvn-cli-opts: $MAVEN_CLI_OPTS
+
+      # ... and perform tests on each environment on the runner
       - name: Test with Java ${{ matrix.Java}}
         uses: ./.github/actions/test
         with:
