--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,54 @@
     <url>https://github.com/ecosio/ecosio-logfmt/issues</url>
   </issueManagement>
 
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <!-- In order to release the artifact to Maven Central it needs to be
+               signed -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.2.4</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <configuration>
+                  <!-- This is required to make sure the plugin does not stop
+                       asking for user input on the passphrase -->
+                  <gpgArguments>
+                    <arg>--pinentry-mode</arg>
+                    <arg>loopback</arg>
+                  </gpgArguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- Maven Central "new" Central Portal stuff - no "legacy" OSSRH setup unless explicitly
+               asked for and proved that the new setup doesn't work -->
+          <plugin>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.4.0</version>
+            <extensions>true</extensions>
+            <configuration>
+              <publishingServerId>central</publishingServerId>
+              <tokenAuth>true</tokenAuth>
+              <autoPublish>true</autoPublish>
+              <checksums>all</checksums>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
@@ -284,11 +332,6 @@
             <excludes>
               <exclude>**/*.properties</exclude>
             </excludes>
-            <archive>
-              <manifestEntries>
-                <Class-Path>. /* /opt/jwt/*</Class-Path>
-              </manifestEntries>
-            </archive>
           </configuration>
           <executions>
             <execution>
@@ -309,6 +352,24 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.1</version>
+        </plugin>
+        <!-- We have to sign the deployment files in order to deploy those to Maven Central -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>3.2.4</version>
+          <configuration>
+            <useAgent>true</useAgent>
+          </configuration>
+          <executions>
+            <execution>
+              <id>sign-artifacts</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>sign</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <!-- Generates a site for the project based on defined reports in the POM
              Prevent the site plugin from deploying to the scm url
@@ -377,20 +438,21 @@
           </executions>
           <dependencies>
             <dependency>
-              <groupId>org.codehaus.groovy</groupId>
+              <groupId>org.apache.groovy</groupId>
               <artifactId>groovy-ant</artifactId>
-              <version>3.0.21</version>
+              <version>4.0.21</version>
               <scope>runtime</scope>
             </dependency>
             <dependency>
-              <groupId>org.codehaus.groovy</groupId>
+              <groupId>org.apache.groovy</groupId>
               <artifactId>groovy-xml</artifactId>
-              <version>3.0.21</version>
+              <version>4.0.21</version>
               <scope>runtime</scope>
             </dependency>
           </dependencies>
         </plugin>
-        <!-- Checkstyle ensures that everyone is committing code that is following our formatting guidelines -->
+        <!-- Checkstyle ensures that everyone is committing code that is following our formatting
+             guidelines -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
@@ -527,7 +589,8 @@
         <artifactId>gmavenplus-plugin</artifactId>
         <version>3.0.2</version>
       </plugin>
-      <!-- Checkstyle ensures that everyone is committing code that is following our formatting guidelines -->
+      <!-- Checkstyle ensures that everyone is committing code that is following our formatting
+           guidelines -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -543,15 +606,66 @@
         <artifactId>gmavenplus-plugin</artifactId>
         <version>3.0.2</version>
       </plugin>
+      <!-- Generates reports information about the project -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>3.5.0</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>index</report>
+              <report>dependency-info</report>
+              <report>issue-management</report>
+              <report>scm</report>
+              <report>licenses</report>
+              <report>distribution-management</report>
+              <report>team</report>
+              <report>summary</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+      <!-- Generate Javadoc while reporting -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.6.3</version>
+        <inherited>true</inherited>
+        <configuration>
+          <source>17</source>
+          <show>protected</show>
+          <failOnWarnings>false</failOnWarnings>
+          <release>17</release>
+          <stylesheet>java</stylesheet>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <id>html</id>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
+      <!-- Generate surefire test reports -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>3.2.5</version>
+        <configuration>
+          <showSuccess>true</showSuccess>
+          <outputDirectory>${basedir}/target/site</outputDirectory>
+          <linkXRef>true</linkXRef>
+        </configuration>
       </plugin>
+      <!-- Add cross-references from failed tests to the line number in the source code -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <version>3.3.2</version>
+      </plugin>
+      <!-- Checkstyle report-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -564,10 +678,24 @@
           </reportSet>
         </reportSets>
       </plugin>
+      <!-- Generates a changes report based on entries found in src/changes/changes.xml -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-        <version>3.3.2</version>
+        <artifactId>maven-changes-plugin</artifactId>
+        <version>2.12.1</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>changes-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+      <!-- Generates a report on known bugs found on analyzing the project code -->
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.8.4.0</version>
       </plugin>
     </plugins>
   </reporting>
